--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/white"
+        android:elevation="4dp"
         android:theme="@style/ToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
